# studium

./: .env  .gitignore  Cargo.toml  readme.md  status.md
src/: main.rs
src/business/: collections.rs  drops.rs  mod.rs  planet.rs
src/config/: mod.rs
src/config/files/: repetition.yaml
src/database/: mod.rs
src/development/: mod.rs
src/routes/: mod.rs  templates.rs
src/routes/api/: json.rs  mod.rs  templates.rs
src/routes/setup/: mod.rs  verify.rs
templates/: header.html  index.html  setup.html  subject_frame.html
templates/static/: extra.css  load.js
templates/static/js/: load.js  setup_load.js
