[package]
name = "studium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
toml = "0.7.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.152"
askama = "0.11.1"
sqlite = "0.30.3"
serde_json = "1.0.92"
regex = "1.7.1"
scraper = "0.15.0"
reqwest = {version = "0.11.15", features = ["blocking"]}
mysql = "23.0.1"
r2d2 = "0.8.10"
r2d2_mysql = "23.0.0"

# dev-tools deps
local-ip-address = "0.5.1"
fast_qr = "0.7.0"
